--- a/app/sass/parts/header.scss
+++ b/app/sass/parts/header.scss
@@ -104,15 +104,12 @@
 
 @keyframes shake {
   from, 16%, to {
-    -webkit-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);
   }
   1.6%, 4.8%, 8%, 11.2%, 14.4% {
-    -webkit-transform: translate3d(-2px, 0, 0);
     transform: translate3d(-2px, 0, 0);
   }
   3.2%, 6.4%, 9.6%, 12.8% {
-    -webkit-transform: translate3d(2px, 0, 0);
     transform: translate3d(2px, 0, 0);
   }
 }
